--- a/assets/style/common.css
+++ b/assets/style/common.css
@@ -57,3 +57,14 @@
 .z-index-1{
   z-index: 1;
 }
+
+/* font weight */
+.font-weight-normal{
+  font-weight: normal;
+}
+.font-weight-400{
+  font-weight: 400;
+}
+.font-weight-500{
+  font-weight: 500;
+}
