steps and revimatch partners page converted

--- a/assets/style/colors.css
+++ b/assets/style/colors.css
@@ -31,3 +31,21 @@
 .bg-lightblue {
   background: #e6edfd;
 }
+.bg-lightred {
+  background: #ff6057;
+}
+.bg-green{
+  background: #57c6ad;
+}
+.bg-lightgreen2{
+  background: #74e65b;
+}
+.bg-purple{
+  background: #ce73f8;
+}
+.bg-blue{
+  background: #143281;
+}
+.bg-orange{
+  background: #f05537;
+}
