--- a/assets/style/common.css
+++ b/assets/style/common.css
@@ -41,7 +41,7 @@
   background-color: #0b4fe6;
   color: #fff;
 }
-.outline-none{
+.outline-none {
   outline: none;
 }
 /* border-radius */
@@ -66,6 +66,9 @@
 .br-radius35 {
   border-radius: 35px;
 }
+.br-radius40 {
+  border-radius: 40px;
+}
 
 /* positions */
 .top-0 {
@@ -84,6 +87,9 @@
 /* indexes */
 .z-index-1 {
   z-index: 1;
+}
+.z-index--1 {
+  z-index: -1;
 }
 
 /* font weight */
@@ -109,3 +115,17 @@
   box-shadow: 0 16px 48px 0 rgba(11, 79, 230, 0.13);
   background-color: var(--white);
 }
+
+/* cursor-pointer */
+.cursor-pointer {
+  cursor: pointer;
+}
+
+/* common hr padding */
+.hr-common-padding{
+  padding: 2px 0px 0px 0px;
+}
+.hr-common-padding2{
+  padding: 3px 0px 0px 0px;
+}
+
