--- a/assets/style/font-size.css
+++ b/assets/style/font-size.css
@@ -34,6 +34,9 @@
 .fs-24{
     font-size: 24px;
 }
+.fs-26{
+    font-size: 26px;
+}
 .f-28{
     font-size: 28px;
 }
@@ -42,6 +45,9 @@
 }
 .fs-38{
     font-size: 38px;
+}
+.fs-40{
+    font-size: 40px;
 }
 .fs-50{
     font-size: 50px;
