transition added on sidenav and popup added on partner , accountant and index page

--- a/assets/style/common.css
+++ b/assets/style/common.css
@@ -129,3 +129,14 @@
   padding: 3px 0px 0px 0px;
 }
 
+
+.elementToFadeInAndOut {
+  opacity: 1;
+  animation: fade 2s linear;
+}
+
+
+@keyframes fade {
+0%,100% { opacity: 0 }
+50% { opacity: 1 }
+}
