--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -66,17 +66,34 @@ body {
   background-color: #fff;
   overflow-x: hidden;
   transition: 0.5s;
+  transition-delay: 0.5s;
   padding-top: 60px;
 }
 
+.mobile-menu-container .active{
+  width: 250px;
+}
+.mobile-menu-container .sidenav .button-container{ 
+  transition: all 0.3s;
+  transition-delay: 0;
+  opacity: 0;  
+}
 .mobile-menu-container .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
   display: block;
-  transition: 0.3s;
+  transition: all 0.3s;
+  transition-delay: 0;
+  opacity: 0;
 }
+
+.mobile-menu-container .active a , .mobile-menu-container .active .button-container{
+  transition-delay: 0.8s;
+  opacity: 1;
+}
+
 
 .mobile-menu-container .sidenav a:hover {
   color: #0b4fe6;
